# community

./: .gitignore  .yara-ci.yml  README.md  pyproject.toml  recyclebin_access.py
.github/: update_mitre.py  workflows
.github/workflows/: .yara-ci.yml  python-package.yml  update-mitre-files.yml
conf/: aws.conf
data/: 7zz  cryptopools.py  innoextract  malicioustlds.txt  malpedia.json  malpedia.py  mbc.json  readme.md  scraper_safe_url_list.py  security_tools.json
data/mitre/: TTPs.json  config.yml  ics_attck_json.json  mobile_attck.json  mobile_attck_json.json  nist_controls_json.json  pre_attck_json.json  preattack.json
data/sigma/: filters.json
data/trid/: tridupdate.py
data/yara/: Matanbuchus.yar  README.md
deprecated/signatures/: dyre_apis.py
docs/: sigma-integration.md
extra/: msft-public-ips.csv
mitre/: enterprise_attck_nist_800_53_rev4_controls.json
modules/feeds/: bad_ssl_certs.py
modules/machinery/: aws.py  kvmremote.py  physical.py
modules/parsers/: utils.py
modules/processing/: autorun.py  autoruns.py  cif.py  curtain.py  hollowshunter.py  html_scraper.py  loldrivers.py  sigma.py  sysmon.py  tracee.py
modules/reporting/: elasticsearchdb.py  malheur.py  misp.py  moloch.py  pcap2cert.py  reporthtml.py  reporthtmlsummary.py  runstatistics.py  syslog.py  zexecreport.py
modules/signatures/: CAPE.py  Log4shell.py  accesses_mailslot.py  accesses_netlogon.py  (+519 more)
utils/: TTPmap_updater.py  clone-machines.py  cuckoomx.py  download_yara.py  fetch_loldrivers.py  listdump.py  machine.py  smtp_sinkhole.py  smtp_sinkhole.sh  tridupdate.py
(+829 files in other folders)
