[project]
name = "CAPESandbox_community"
version = "1.0"
optional-dependencies.maco = ["CAPE-parsers", "maco", "requests"]

[tool.black]
line-length = 132
include = "\\.py(_disabled)?$"

[tool.isort]
profile = "black"
no_lines_before = ["FUTURE", "STDLIB"]
line_length = 132

[tool.setuptools]
packages = []
